# 23432123

./: .bazelignore  .bazelrc  .bazelrc.remote  .gitignore  .mailmap  .pr_agent.toml  .readthedocs.yaml  .skipped-tests  AUTHORS  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  Rakefile  WORKSPACE  go  go.bat  multitool.lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  py.txt  renovate.json
dotnet/test/firefox/: AssemblyTeardown.cs  BUILD.bazel  FirefoxDriverServiceTest.cs  FirefoxDriverTest.cs  FirefoxProfileManagerTest.cs  FirefoxProfileTests.cs  Selenium.WebDriver.Firefox.Tests.csproj  WebDriver.Firefox.Tests.csproj
java/: BUILD.bazel  CHANGELOG  defs.bzl  maven_install.json  spotbugs-excludes.xml  version.bzl
java/private/: BUILD.bazel  common.bzl  dist_info.bzl  export.bzl  java_test_suite.bzl  module.bzl  selenium_test.bzl
java/src/org/openqa/selenium/: Architecture.java  BUILD.bazel  By.java  Cookie.java  DetachedShadowRootException.java  ElementClickInterceptedException.java  HasDownloads.java  HealthCheckFailedException.java  ImmutableCapabilities.java  InsecureCertificateException.java  InvalidArgumentException.java  InvalidCookieDomainException.java  InvalidElementStateException.java  JavascriptExecutor.java  Keys.java  NoSuchElementException.java  NoSuchSessionException.java  NotFoundException.java  PageLoadStrategy.java  PersistentCapabilities.java  Platform.java  Point.java  Position.java  Proxy.java  ScriptTimeoutException.java  SessionNotCreatedException.java  StaleElementReferenceException.java  TimeoutException.java  UnableToSetCookieException.java  UnexpectedAlertBehaviour.java  UnhandledAlertException.java  UnsupportedCommandException.java  WebDriver.java  WebDriverException.java  WebElement.java  WindowType.java
java/test/org/openqa/selenium/: ClickTest.java  CookieImplementationTest.java  NoSuchShadowRootTest.java  PageLoadingTest.java  PlatformTest.java  UploadTest.java  WebNetworkTest.java  WebScriptTest.java  WrappedWebElement.java
py/: BUILD.bazel  CHANGES  conftest.py  generate.py  generate_api_module_listing.py  pyproject.toml  release-selenium.py  requirements.txt  requirements_lock.txt  setup.cfg  setup.py  tox.ini
py/docs/: .readthedocs.yaml  README.rst  requirements.txt
py/docs/source/: api.rst  conf.py  index.rst
py/private/: browsers.bzl  suite.bzl  untar.py
py/selenium/: __init__.py  types.py
py/selenium/common/: exceptions.py
py/selenium/webdriver/: __init__.py
py/selenium/webdriver/chrome/: service.py  webdriver.py
py/selenium/webdriver/chromium/: options.py  remote_connection.py  service.py  webdriver.py
py/selenium/webdriver/common/: keys.py  options.py  print_page_options.py  proxy.py  selenium_manager.py  service.py  utils.py  virtual_authenticator.py
py/selenium/webdriver/common/actions/: action_builder.py  input_device.py  interaction.py  key_actions.py  key_input.py  pointer_input.py  wheel_actions.py  wheel_input.py
py/selenium/webdriver/common/bidi/: bidi.py  browser.py  browsing_context.py  cdp.py  common.py  emulation.py  input.py  network.py  script.py  session.py  storage.py  webextension.py
py/selenium/webdriver/common/driver_extensions/: has_fedcm_dialog.py
py/selenium/webdriver/common/fedcm/: account.py  dialog.py
py/selenium/webdriver/edge/: service.py  webdriver.py
py/selenium/webdriver/firefox/: options.py  remote_connection.py  service.py  webdriver.py
py/selenium/webdriver/ie/: service.py  webdriver.py
py/selenium/webdriver/remote/: client_config.py  errorhandler.py  fedcm.py  network.py  remote_connection.py  server.py  shadowroot.py  webdriver.py  webelement.py  websocket_connection.py
py/selenium/webdriver/safari/: remote_connection.py  service.py  webdriver.py
py/selenium/webdriver/support/: event_firing_webdriver.py  expected_conditions.py  relative_locator.py  wait.py
py/selenium/webdriver/webkitgtk/: service.py  webdriver.py
py/selenium/webdriver/wpewebkit/: options.py  service.py  webdriver.py
py/test/selenium/webdriver/chrome/: chrome_launcher_tests.py  chrome_service_tests.py  proxy_tests.py
py/test/selenium/webdriver/common/: alerts_tests.py  api_example_tests.py  bidi_browser_tests.py  bidi_browsing_context_events_tests.py  bidi_browsing_context_tests.py  bidi_emulation_tests.py  bidi_input_tests.py  bidi_network_tests.py  bidi_permissions_tests.py  bidi_script_tests.py  bidi_session_tests.py  bidi_storage_tests.py  bidi_tests.py  bidi_webextension_tests.py  cookie_tests.py  devtools_tests.py  driver_element_finding_tests.py  executing_async_javascript_tests.py  executing_javascript_tests.py  fedcm_tests.py  frame_switching_tests.py  implicit_waits_tests.py  interactions_tests.py  interactions_with_device_tests.py  position_and_size_tests.py  proxy_tests.py  select_class_tests.py  selenium_manager_tests.py  stale_reference_tests.py  takes_screenshots_tests.py  timeout_tests.py  typing_tests.py  upload_tests.py  virtual_authenticator_tests.py  visibility_tests.py  w3c_interaction_tests.py  webdriverwait_tests.py  webserver.py  window_switching_tests.py  window_tests.py
py/test/selenium/webdriver/edge/: conftest.py  edge_launcher_tests.py  edge_service_tests.py
py/test/selenium/webdriver/firefox/: ff_installs_addons_tests.py  ff_takes_full_page_screenshots_tests.py  firefox_service_tests.py  firefox_sizing_tests.py
py/test/selenium/webdriver/marionette/: conftest.py  mn_options_tests.py
py/test/selenium/webdriver/remote/: custom_element_tests.py  remote_server_tests.py  (+6 more)
rust/: BUILD.bazel  CHANGELOG.md  Cargo.toml  defs.bzl
rust/private/: rustfmt_wrapper.bzl
rust/src/: chrome.rs  config.rs  edge.rs  electron.rs  ffmpeg.rs  files.rs  firefox.rs  grid.rs  iexplorer.rs  lib.rs  lock.rs  main.rs  metadata.rs  safari.rs  safaritp.rs  shell.rs
rust/tests/: BUILD.bazel  browser_download_tests.rs  browser_tests.rs  cache_tests.rs  common.rs  config_tests.rs  electron_tests.rs  exec_driver_tests.rs  grid_tests.rs  mirror_tests.rs  offline_tests.rs  output_tests.rs  proxy_tests.rs  record_tests.rs  stable_browser_tests.rs  webview_tests.rs
(+19333 files in other folders)
